--- a/src/app/views/account/jobsites/jobsites.html
+++ b/src/app/views/account/jobsites/jobsites.html
@@ -1,5 +1,4 @@
-<div id="booking" class="tab-pane fade in">
-<ui-view>
-
-</ui-view>
+<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
+  <ui-view>
+  </ui-view>
 </div>
