--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -1,25 +1,33 @@
-<div id="booking" class="tab-pane fade in">
-    <h2>Favorites</h2>
-
-    <div class="booking-history">
-        <div class="booking-info clearfix" ng-repeat="pro in mdl.favorites">
-            <div class="date">
-                <a class="hover-effect popup-gallery">
-                    <img  height="72" ng-src="{{pro.image || 'http://placehold.it/72x72'}}" >
-                </a>
-            </div>
-            <h4 class="box-title">
-                <i class="icon soap-icon-heart yellow-color"></i>{{pro.name}}
-            </h4>
-            <a class="pull-right icon-right">
-                <i class="fa fa-trash"></i>
-            </a>
-            <a class="pull-right icon-right" ui-sref="main.equiDetails({id:pro.id})">
-                <i class="fa fa-eye"></i>
-            </a>
-            <!-- <button class="btn all-btn status">Unfavourite</button> -->
-            <!-- <button class="btn all-btn status" ui-sref="main.equiDetails({id:pro.id})">View</button> -->
-        </div>
-
-    </div>
+<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+		<h1 class="no-margin skin-color seller-heading-font">Favorites</h1>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+		<div class="booking-info clearfix" ng-repeat="pro in mdl.favorites">
+			<div class="date">
+				<a class="hover-effect popup-gallery">
+					<img  height="72" ng-src="{{pro.image || 'http://placehold.it/72x72'}}" >
+				</a>
+			</div>
+			<h4 class="box-title">
+				<i class="icon soap-icon-heart yellow-color"></i>{{pro.name}}
+				<div class="col-xs-12 visible-xs action-btn-xs">
+					<a class="icon-right">
+						<i class="fa fa-trash"></i>&nbsp &nbsp &nbsp
+					</a>
+					<a class="icon-right" ui-sref="main.equiDetails({id:pro.id})">
+						<i class="fa fa-eye"></i>
+					</a>
+				</div>
+			</h4>
+			<a class="pull-right icon-right hidden-xs">
+				<i class="fa fa-trash"></i>
+			</a>
+			<a class="pull-right icon-right hidden-xs" ui-sref="main.equiDetails({id:pro.id})">
+				<i class="fa fa-eye"></i>&nbsp &nbsp &nbsp
+			</a>
+			<!-- <button class="btn all-btn status">Unfavourite</button> -->
+			<!-- <button class="btn all-btn status" ui-sref="main.equiDetails({id:pro.id})">View</button> -->
+		</div>
+	</div>
 </div>
