--- a/src/app/views/account/inquiries/inquiries.html
+++ b/src/app/views/account/inquiries/inquiries.html
@@ -2,4 +2,6 @@
 <button ui-sref="main.sellerAccount.inquiries.view({id:0})">View</button>
 <button ui-sref="main.sellerAccount.inquiries.list">List</button>-->
 
-<ui-view></ui-view>
+<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
+    <ui-view></ui-view>
+</div>
