--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -1,31 +1,29 @@
-<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
-    <div class="guest-reviews conversation-list">
-        <h2>Enquiries</h2>
-
-        <div ng-repeat="item in mdl.items" class="guest-review table-wrapper">
-            <div class="col-xs-3 col-md-3 author table-cell">
-                <p class="name">Jessica Brown</p>
-            </div>
-            <div class="col-xs-9 col-md-6 table-cell comment-container">
-                <div class="comment-header clearfix">
-                    <h4 class="comment-title">{{item.subject}}</h4>
-                </div>
-            </div>
-            <div class="col-xs-9 col-md-3 table-cell comment-container">
-                <div class="comment-header clearfix">
-                    <div class="review-score enquiry-buttons">
-                        <a href="" class="pull-right">Mark as read</a>
-                        <button class="btn pull-right all-btn view-btn primary-btn" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
-                        <!-- <a class="pull-right clickable-icon">
-                            <i class="fa fa-eye"></i>
-                        </a> -->
-
-                        <!-- <button class="btn pull-right all-btn reply-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">Reply</button>
-                        <button class="btn all-btn " ng-click="mdl.delete(item)">Delete</button> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
+<!-- <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;"> -->
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+	<h1 class="no-margin skin-color seller-heading-font">Enquiries</h1>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+	<div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding no-bpadding">
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 enquiry-name no-padding">
+			<p class="name heading-text">Jessica Brown</p>
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-5 col-xs-12 enquiry-subject no-padding">
+			<div class="comment-header clearfix">
+				<p class="comment-title heading-text">{{item.subject}}</p>
+			</div>
+		</div>
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 enquiry-action no-padding">
+			<div class="comment-header clearfix">
+				<div class="review-score enquiry-buttons">
+					<a href="" class="pull-right desc-text">Mark as read</a>
+					<button class="btn pull-right all-btn view-btn primary-btn" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
+					<!-- <a class="pull-right clickable-icon">
+						<i class="fa fa-eye"></i>
+					</a> -->
+					<!-- <button class="btn pull-right all-btn reply-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">Reply</button>
+					<button class="btn all-btn " ng-click="mdl.delete(item)">Delete</button> -->
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
