--- a/src/app/views/account/invoices/invoices.html
+++ b/src/app/views/account/invoices/invoices.html
@@ -1,3 +1,3 @@
-<div id="booking" class="tab-pane fade in">
-  <ui-view></ui-view>
+<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
+    <ui-view></ui-view>
 </div>
