--- a/src/app/views/account/invoices/view/view.html
+++ b/src/app/views/account/invoices/view/view.html
@@ -1,48 +1,45 @@
-<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 0;">
-	<div class="row order-details-row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
+	<!-- <div class="row order-details-row"> -->
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 			<h2 class="heading-text" style="margin-bottom: 8px;">Invoice Details</h2>
 			<p class="bg-danger" style="padding: 8px;">This invoice is not paid. Please pay to get order processed</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<p class="orange-text">Order number:</p>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding term-description">
+			<p class="orange-text no-margin">Order number:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<p ng-if="mdl.invoice.order.id">{{mdl.invoice.order.id}}</p>
-			<p ng-if="!mdl.invoice.order.id">--</p>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+			<p class="no-margin" ng-if="mdl.invoice.order.id">{{mdl.invoice.order.id}}</p>
+			<p class="no-margin" ng-if="!mdl.invoice.order.id">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+			<hr />
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding">
 			<p class="orange-text">First name:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 			<p ng-if="mdl.invoice.order.billing_address.first_name">{{mdl.invoice.order.billing_address.first_name}}</p>
 			<p ng-if="!mdl.invoice.order.billing_address.first_name">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding">
 			<p class="orange-text">Last name:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 			<p ng-if="mdl.invoice.order.billing_address.last_name">{{mdl.invoice.order.billing_address.last_name}}</p>
 			<p ng-if="!mdl.invoice.order.billing_address.last_name">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<p class="orange-text">Phone:</p>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding">
+			<p class="orange-text no-margin">Phone:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<p ng-if="mdl.invoice.order.billing_address.phone">{{mdl.invoice.order.billing_address.phone}}</p>
-			<p ng-if="!mdl.invoice.order.billing_address.phone">--</p>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+			<p class="no-margin" ng-if="mdl.invoice.order.billing_address.phone">{{mdl.invoice.order.billing_address.phone}}</p>
+			<p class="no-margin" ng-if="!mdl.invoice.order.billing_address.phone">--</p>
 		</div>
+	<!-- </div> -->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+		<hr />
 	</div>
-	<!-- <h2>Invoice Details</h2> -->
-	<!-- <p class="bg-danger" style="padding: 5px;">This invoice is not paid. Please pay to get order processed.</p> -->
-	<!-- <dl class="term-description">
-		<dt>Order number:</dt><dd>{{mdl.invoice.order.id}}</dd>
-		<dt>First name:</dt><dd>{{mdl.invoice.order.billing_address.first_name}}</dd>
-		<dt>Last name:</dt><dd>{{mdl.invoice.order.billing_address.last_name}}</dd>
-		<dt>Phone:</dt><dd>{{mdl.invoice.order.billing_address.phone}}</dd>
-	</dl> -->
-	<hr />
-	<div class="row invoice-address">
+	<div class="row invoice-address align-address" style="margin-bottom: 0;">
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 			<h2 class="heading-text">Shipping Address</h2>
 			<dl class="term-description">
@@ -63,96 +60,48 @@
 		</div>
 	</div>
 </div>
-<!-- <div id="tour-details" class="travelo-box order-details" style="padding: 0px;" load-indicator>
-		<div ng-repeat="item in mdl.invoice.items" class="intro2 small-box border-box table-wrapper hidden-table-sms">
-				<div class="image-container table-cell" style="width: 100px;"><img src="http://placehold.it/80x80" alt=""></div>
-				<div class="description" style="width: 250px;">
-						<h4>{{item.detail.name}}</h4>
-				</div>
-				<div class="table-cell" style="width: 400px;">
-						<dl class="term-description" style="width: 49%; float: left;">
-								<dt>Rented For</dt><dd>12 days</dd>
-								<dt>Order Type</dt><dd>Postpaid</dd>
-								<dt>Quantity</dt><dd>3</dd>
-						</dl>
-						<dl class="term-description" style="width: 49%; float: left;">
-								<dt>Shipping</dt><dd>$100</dd>
-								<dt>Overuse</dt><dd>$178</dd>
-								<dt>Additional</dt><dd>$230</dd>
-						</dl>
-				</div>
-
-				<div class="price-section table-cell">
-						<div class="price">
-								<div class="price-per-unit">${{item.subtotal | number}}</div>
-						</div>
-				</div>
-		</div>
-		<div class="intro2 small-box border-box table-wrapper hidden-table-sms cart-total">
-				<div class="description">
-						<h4>Cart Total</h4>
-				</div>
-
-				<br />
-				<div class="table-cell">
-						<dl class="term-description">
-								<dt>Shipping Cost</dt><dd>${{mdl.invoice.shipping_charge | number}}</dd>
-								<dt>Overusage</dt><dd>${{mdl.invoice.shipping_charge | number}}</dd>
-								<dt>Additional</dt><dd>${{mdl.invoice.shipping_charge | number}}</dd>
-						</dl>
-				</div>
-				<div class="price-section table-cell">
-						<div class="price"><div class="price-per-unit">${{mdl.invoice.total | number}}</div></div>
-				</div>
-		</div>
-		<button class="btn all-btn pull-left" ui-sref="main.account.invoices.list">Back to Invoice List</button>
-		<button class="btn all-btn pull-right btn-right">Approve Invoice</button>
-		<button class="btn all-btn pull-right">Download PDF</button>
-		<button style="margin-right:4px;" class="btn btn-medium pull-right dark-blue2"  process-indicator ng-click="invoicesMdl.pay(mdl.invoice)">Pay</button>
-</div> -->
-
 <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoice-details-col" ng-repeat="item in mdl.invoice.items">
-		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 pull-center">
 			<img src="http://placehold.it/80x80" alt="">
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 product-name">
 			<h4>{{item.detail.name}}</h4>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 description-col">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-5 col-xs-12 description-col description-col-xs col-padding-small">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 border-sm">
 				<p>Rented For <span class="pull-right">12 days</span></p>
 				<p>Order Type <span class="pull-right">Postpaid</span></p>
 				<p>Quantity <span class="pull-right">3</span></p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right-col">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right-col">
 				<p>Shipping <span class="pull-right">$100</span></p>
 				<p>Overuse <span class="pull-right">$178</span></p>
 				<p>Additional <span class="pull-right">$230</span></p>
 			</div>
 		</div>
-		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-12 product-name pull-center">
+		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs">
 			<h4>${{item.subtotal | number}}</h4>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
 			<div class="description">
 				<h4 style="margin-top: 28px;">Cart Total</h4>
 			</div>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 add-cost">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
 			<p>Shipping Cost <span class="pull-right">${{mdl.invoice.shipping_charge | number}}</span></p>
 			<p>Overusage<span class="pull-right">${{mdl.invoice.shipping_charge | number}}</span></p>
 			<p>Additional<span class="pull-right">${{mdl.invoice.shipping_charge | number}}</span></p>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 total-cost" style="margin-top: 28px;">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost" style="margin-top: 28px;">
 			<div>
 				${{mdl.invoice.total | number}}
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col buyer-invoice-btn">
 		<button class="btn all-btn pull-left primary-btn" ui-sref="main.account.invoices.list">Back to Invoice List</button>
 		<button class="btn all-btn pull-right btn-right primary-btn">Approve Invoice</button>
 		<button class="btn all-btn pull-right primary-btn">Download PDF</button>
