--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -183,6 +183,10 @@ img.full-width { height: auto; }
 	font-size: 13px;
 }
 
+.big-font {
+  font-size: 21px !important;
+}
+
 .devider {
   border-bottom: 1px dashed #dddddd;
   margin-top: 10px;
