--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5557,7 +5557,7 @@ button.btn {
   left: 0;
   bottom: 0;
   right: 0;
-  background: rgba(0,0,0,.3);
+  background: rgba(0,0,0,.4);
 }
 
 .landing-section {
@@ -5632,16 +5632,28 @@ button.btn {
 .landing-submenu {
   background-color: #49443E !important;
   height: 40px;
+  .submenu-ul {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
   .navbar-nav {
     li {
       display: inline-block;
       float: none;
+      display: block;
+      flex: 0 1 auto;
+      padding: 0 5.9% 0 0;
       a {
         &:hover {
-          background-color: #3E3E3E !important;
+          background-color: transparent !important;
+          color: $primary-orange-color !important;
         }
         &:focus {
-          background-color: #3E3E3E !important;
+          background-color: transparent !important;
+          color: $primary-orange-color !important;
         }
       }
     }
@@ -5655,7 +5667,7 @@ button.btn {
       }
       .not-user {
         > a {
-          padding: 10px 15px;
+          padding: 10px 0px;
         }
       }
     }
@@ -6298,39 +6310,28 @@ section {
   }
 }
 
-// .hello {
-//   a {
-//     padding: 16px !important;
-//     &:before {
-//       content: "1";
-//       height: 20px;
-//       width: 20px;
-//       position: absolute;
-//       background: #FB4F14;
-//       border-radius: 100%;
-//       right: 8px;
-//       top: 8px;
-//       text-align: center;
-//       font-size: 12px;
-//     }
-//     i {
-//       font-size: 21px;
-//     }
-//   }
-// }
 .notification-li {
   a {
-    padding: 15px !important;
+    padding: 16px !important;
+    cursor: pointer;
   }
   .notification {
-    height: 20px;
-    width: 20px;
+    height: 8px;
+    width: 8px;
     position: absolute;
     background: #FB4F14;
     border-radius: 100%;
-    right: 8px;
-    top: 8px;
+    right: 11px;
+    top: 15px;
     text-align: center;
     font-size: 12px;
+    animation-duration: 1s;
+    animation-delay: 300ms;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: pulse;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 300ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: pulse;
   }
 }
