--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -20,8 +20,9 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand pointerhover">
-							<img ui-sref="home" src="assets/images/logo.png"  />
+						<a class="navbar-brand pointerhover" ui-sref="home">
+							<h4 class="white-color big-font">MARKET<span class="orange-color">PLACE</span></h4>
+							<!-- <img ui-sref="home" src="assets/images/logo.png"  /> -->
 						</a>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -34,6 +35,27 @@
 							</li>
 							<li class="not-user visible-xs visible-sm" ng-click="moreEquipments()">
 								<a class="soap-popupbox pointerhover">Equipments</a>
+							</li>
+							<li class="not-user notification-li" ng-if="isLoggedIn()">
+								<a href="">
+									<i class="fa fa-bell-o big-font hidden-xs"></i>
+									<span class="visible-xs">Notifications</span>
+									<div class="notification animated hidden-xs" style="right: 15px;"></div>
+								</a>
+							</li>
+							<li class="not-user notification-li" ng-if="isLoggedIn()">
+								<a href="">
+									<i class="fa fa-envelope-o big-font hidden-xs"></i>
+									<span class="visible-xs">Messages</span>
+									<div class="notification animated hidden-xs"></div>
+								</a>
+							</li>
+							<li class="not-user notification-li" ng-if="isLoggedIn()">
+								<a ui-sref="main.cart">
+									<i class="fa fa-shopping-cart big-font hidden-xs"></i>
+									<span class="visible-xs">Shopping Cart</span>
+									<div class="notification animated hidden-xs"></div>
+								</a>
 							</li>
 							<div class="visible-xs account-list-xs" ng-if="isLoggedIn()">
 								<li>
@@ -49,20 +71,6 @@
 									<a href="" ng-click="logout()" title="signout">Signout</a>
 								</li>
 							</div>
-							<li class="not-user notification-li" ng-if="isLoggedIn()">
-								<a href="">
-									<i class="fa fa-bell-o big-font hidden-xs"></i>
-									<span class="visible-xs">Notifications</span>
-									<div class="notification">1</div>
-								</a>
-							</li>
-							<li class="not-user notification-li" ng-if="isLoggedIn()">
-								<a href="">
-									<i class="fa fa-envelope-o big-font hidden-xs"></i>
-									<span class="visible-xs">Messages</span>
-									<div class="notification">1</div>
-								</a>
-							</li>
 							<li class="dropdown hidden-xs landing-dropdown" ng-if="isLoggedIn()">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 									<img src="/assets/images/avtar.png">&nbsp
@@ -114,11 +122,12 @@
 							<li class="not-user">
 								<a class="soap-popupbox pointerhover">Concrete & Mason</a>
 							</li>
-							<li class="dropdown landing-dropdown" ng-click="moreEquipments()">
-								<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span>
+							<li class="dropdown landing-dropdown" ng-click="moreEquipments()" style="padding-right: 0 !important;">
+								<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding: 10px 0;">More <span class="caret"></span>
 								</a>
 							</li>
-							<div class="container hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
+						</ul>
+						<div class="container hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
 								<div class="row hidden-sm hidden-xs">
 									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
 										<h3 class="heading-text">Aerial Lifts</h3>
@@ -190,8 +199,7 @@
 										</p>
 									</div>
 								</div>
-							</div>
-						</ul>
+						</div>
 					</div>
 				</div>
 			</nav>
