--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5311,10 +5311,15 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
   }
   > tbody {
     > tr {
+      cursor: pointer;
+      transition: background-color 0.6s ease;
+      &:hover {
+        background-color: #FFF7F7;
+      }
       > td {
         border-top: 0;
         border-bottom: 1px solid $primary-border-color;
-        border-right: 1px solid $primary-border-color;
+        // border-right: 1px solid $primary-border-color;
         padding-top: 15px;
         padding-bottom: 15px;
         h3 {
@@ -5327,8 +5332,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
           font-size: 13px;
         }
         img {
-          width: 100px;
-          height: 80px;
+          width: 90px;
+          height: 60px;
         }
          button {
           margin-bottom: 10px;
@@ -5362,7 +5367,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
       .action-td {
         vertical-align: middle;
         i {
-          font-size: 18px;
+          font-size: 16px;
           margin-right: 15px;
           color: $primary-button-color;
           &:last-child {
@@ -6333,5 +6338,39 @@ section {
     -webkit-animation-delay: 300ms;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-name: pulse;
+  }
+}
+
+.add-equip-col {
+  .buyer-add-jobsite {
+    input,textarea,select {
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;
+      margin-bottom: 15px;
+      &:focus {
+        border-color: #66afe9;
+        outline: 0;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6) !important;
+      }
+    }
+  }
+}
+
+.tags-input {
+  .tags {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    &.focused {
+      border-color: #66afe9;
+      outline: 0;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6) !important;
+    }
+    input {
+      box-shadow: none !important;
+      &:focus {
+        box-shadow: none !important;
+        border-color: transparent !important;
+      }
+    }
   }
 }
