--- a/src/app/views/seller-account/equipments/equipments.html
+++ b/src/app/views/seller-account/equipments/equipments.html
@@ -1,252 +1,3 @@
 <div id="dashboard-equipments" class="tab-pane fade in active col-padding-small col-padding-sm">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
-		<h1 class="no-margin skin-color seller-heading-font">My Equipments
-			<button class="btn all-btn pull-right primary-btn"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
-		</h1>
-	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter">
-		<form>
-				<label class="radio radio-inline">
-					<input type="radio" name="filter" />
-					<span class="radio-label">All</span>
-				</label>
-				<label class="radio radio-inline">
-					<input type="radio" name="filter" />
-					<span class="radio-label">On Rent</span>
-				</label>
-				<label class="radio radio-inline">
-					<input type="radio" name="filter" />
-					<span class="radio-label">Vacant</span>
-				</label>
-		</form>
-	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
-		<table class="table equipments-table">
-			<thead>
-				<tr>
-					<th></th>
-					<th></th>
-					<th></th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
-					</td>
-					<td class="pull-center action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
-					</td>
-					<td class="pull-center action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<a href="" class="hover-effect popup-gallery">
-							<img src="" class="gray-area">
-						</a>
-					</td>
-					<td class="equip-desc">
-						<h3>Breaker</h3>
-						<p>Austin, Texas</p>
-						<p>ID: xxxxxxxx</p>
-					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
-					</td>
-					<td class="pull-center action-td">
-						<p>
-							<!-- <button class="btn all-btn primary-btn">View</button> -->
-							<a href="">
-								<i class="fa fa-eye"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-pencil-square-o"></i>
-							</a>
-							<a href="">
-								<i class="fa fa-archive"></i>
-							</a>
-						</p>
-						<!-- <a href="">Edit</a> -->
-						<!-- <a href="">Archive</a> -->
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	<div class="col-xs-12 visible-xs no-padding">
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a href="" class="text">
-							<i class="fa fa-pencil"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a href="" class="text">
-							<i class="fa fa-pencil"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
-		<article class="col-xs-12 mobile-cart seller-mobile-equip">
-				<figure>
-					<a href="#" title="" class="hover-effect pull-center"><img src="http://placehold.it/166x150" alt="" class="inline-block"></a>
-				</figure>
-				<div class="col-xs-12 no-padding devider"></div>
-				<div class="col-xs-12 no-padding details">
-					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
-					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
-							Austin, Texas
-							<span class="pull-right">
-								ID: xxxxxxxx
-							</span>
-						</p>
-					</div>
-					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
-					</div>
-					<div class="col-xs-12 devider"></div>
-					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-eye"></i>
-						</a>
-						<a href="" class="text">
-							<i class="fa fa-pencil-square-o"></i>
-						</a>
-						<a href="" class="pull-right">
-							<i class="fa fa-archive"></i>
-						</a>
-					</div>
-				</div>
-		</article>
-	</div>
+	<ui-view></ui-view>
 </div>
