--- a/src/app/views/seller-account/equipments/add/add.html
+++ b/src/app/views/seller-account/equipments/add/add.html
@@ -130,7 +130,7 @@
 			</div>
 		</div>
 		<div class="row no-bmargin">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 upload-equip-col">
 				<h1 class="no-margin skin-color seller-heading-font">Upload Equipment Images</h1>
 			</div>
 		</div>
