--- a/src/app/views/seller-account/inventory/list/list.html
+++ b/src/app/views/seller-account/inventory/list/list.html
@@ -1,23 +1,17 @@
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
-		<h1 class="no-margin skin-color seller-heading-font">My Equipments
-			<button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.equipments.add"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+		<h1 class="no-margin skin-color seller-heading-font">My Inventory
+			<button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.inventory.add"><i class="icon soap-icon-plus"></i> Add New Inventory</button>
 		</h1>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter">
-		<form>
-				<label class="radio radio-inline">
-					<input type="radio" name="filter" />
-					<span class="radio-label">All</span>
-				</label>
-				<label class="radio radio-inline">
-					<input type="radio" name="filter" />
-					<span class="radio-label">On Rent</span>
-				</label>
-				<label class="radio radio-inline">
-					<input type="radio" name="filter" />
-					<span class="radio-label">Vacant</span>
-				</label>
-		</form>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-product">
+		<p>
+			Select Product: 
+			<select class="form-control">
+				<option>Abc</option>
+				<option>Def</option>
+				<option>Xyz</option>
+			</select>
+		</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
 		<table class="table equipments-table">
@@ -41,9 +35,8 @@
 						<p>Austin, Texas</p>
 						<p>ID: xxxxxxxx</p>
 					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
+					<td class="time-td pull-center vertically-middle">
+						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
 					</td>
 					<td class="text-right action-td">
 						<p>
@@ -51,7 +44,7 @@
 							<a href="">
 								<i class="fa fa-eye"></i>
 							</a>
-							<a ui-sref="main.sellerAccount.equipments.add">
+							<a ui-sref="main.sellerAccount.inventory.add">
 								<i class="fa fa-pencil-square-o"></i>
 							</a>
 							<a href="">
@@ -73,9 +66,8 @@
 						<p>Austin, Texas</p>
 						<p>ID: xxxxxxxx</p>
 					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
+					<td class="time-td pull-center vertically-middle">
+						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
 					</td>
 					<td class="text-right action-td">
 						<p>
@@ -83,7 +75,7 @@
 							<a href="">
 								<i class="fa fa-eye"></i>
 							</a>
-							<a ui-sref="main.sellerAccount.equipments.add">
+							<a ui-sref="main.sellerAccount.inventory.add">
 								<i class="fa fa-pencil-square-o"></i>
 							</a>
 							<a href="">
@@ -105,9 +97,8 @@
 						<p>Austin, Texas</p>
 						<p>ID: xxxxxxxx</p>
 					</td>
-					<td class="time-td">
-						<h3 class="time-util">Time Utilization: 47%</h3>
-						<h3>Dolar Utilization: 82%</h3>
+					<td class="time-td pull-center vertically-middle">
+						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
 					</td>
 					<td class="text-right action-td">
 						<p>
@@ -115,7 +106,7 @@
 							<a href="">
 								<i class="fa fa-eye"></i>
 							</a>
-							<a ui-sref="main.sellerAccount.equipments.add">
+							<a ui-sref="main.sellerAccount.inventory.add">
 								<i class="fa fa-pencil-square-o"></i>
 							</a>
 							<a href="">
@@ -138,7 +129,7 @@
 				<div class="col-xs-12 no-padding details">
 					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
 					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
+						<p>
 							Austin, Texas
 							<span class="pull-right">
 								ID: xxxxxxxx
@@ -146,21 +137,14 @@
 						</p>
 					</div>
 					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
+						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available" class="full-width"></toggle-switch>
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
 						<a href="" class="pull-left">
 							<i class="fa fa-eye"></i>
 						</a>
-						<a ui-sref="main.sellerAccount.equipments.add" class="text">
+						<a ui-sref="main.sellerAccount.inventory.add" class="text">
 							<i class="fa fa-pencil-square-o"></i>
 						</a>
 						<a href="" class="pull-right">
@@ -177,7 +161,7 @@
 				<div class="col-xs-12 no-padding details">
 					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
 					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
+						<p>
 							Austin, Texas
 							<span class="pull-right">
 								ID: xxxxxxxx
@@ -185,21 +169,14 @@
 						</p>
 					</div>
 					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
+						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available" class="full-width"></toggle-switch>
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
 						<a href="" class="pull-left">
 							<i class="fa fa-eye"></i>
 						</a>
-						<a ui-sref="main.sellerAccount.equipments.add" class="text">
+						<a ui-sref="main.sellerAccount.inventory.add" class="text">
 							<i class="fa fa-pencil-square-o"></i>
 						</a>
 						<a href="" class="pull-right">
@@ -216,7 +193,7 @@
 				<div class="col-xs-12 no-padding details">
 					<h4 class="box-title bold-font" style="margin-bottom: 5px;">Breaker</h4>
 					<div class="col-xs-12 no-padding amenities">
-						<p class="no-margin">
+						<p>
 							Austin, Texas
 							<span class="pull-right">
 								ID: xxxxxxxx
@@ -224,21 +201,14 @@
 						</p>
 					</div>
 					<div class="col-xs-12 no-padding">
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Time Utilization:
-							<span class="pull-right">47%</span>
-						</p>
-						<p style="margin-bottom: 5px; margin-top: 5px;">
-							Dolar Utilization:
-							<span class="pull-right">82%</span>
-						</p>
+						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available" class="full-width"></toggle-switch>
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
 						<a href="" class="pull-left">
 							<i class="fa fa-eye"></i>
 						</a>
-						<a ui-sref="main.sellerAccount.equipments.add" class="text">
+						<a ui-sref="main.sellerAccount.inventory.add" class="text">
 							<i class="fa fa-pencil-square-o"></i>
 						</a>
 						<a href="" class="pull-right">
