--- a/src/app/views/seller-account/seller-account.html
+++ b/src/app/views/seller-account/seller-account.html
@@ -10,7 +10,7 @@
     <ul class="tabs hide-mobile" ng-class="{'visible-xs': isShow}">
     	<li active-state="main.sellerAccount.dashboard" ui-sref="main.sellerAccount.dashboard" ng-click="closeDashboard()"><a>Dashboard</a></li>
      	<li active-state="main.sellerAccount.equipments" ui-sref="main.sellerAccount.equipments.list" ng-click="closeDashboard()"><a>Equipments</a></li>
-     	<li active-state="main.sellerAccount.inventory" ui-sref="main.sellerAccount.inventory" ng-click="closeDashboard()"><a>Inventory</a></li>
+     	<li active-state="main.sellerAccount.inventory" ui-sref="main.sellerAccount.inventory.list" ng-click="closeDashboard()"><a>Inventory</a></li>
       <li active-state="main.sellerAccount.orders"    ui-sref="main.sellerAccount.orders.list" ng-click="closeDashboard()"><a>Order Received </a></li>
       <li active-state="main.sellerAccount.invoices"  ui-sref="main.sellerAccount.invoices.list" ng-click="closeDashboard()"><a>Invoices</a></li>
       <li active-state="main.sellerAccount.inquiries" ui-sref="main.sellerAccount.inquiries.list" ng-click="closeDashboard()"><a>Enquiry</a></li>
